# ChangeLog for xfce-base/xfce4-settings
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-settings/ChangeLog,v 1.4 2009/04/21 04:26:48 darkside Exp $

*xfce4-settings-4.6.1 (21 Apr 2009)

  21 Apr 2009; Jeremy Olexa <darkside@gentoo.org>
  -xfce4-settings-4.6.0.ebuild, +xfce4-settings-4.6.1.ebuild:
  Version bump for xfce-4.6.1 release, remove old

  22 Mar 2009; Christoph Mende <angelos@gentoo.org>
  xfce4-settings-4.6.0.ebuild:
  Bumped exo dependency to 0.3.100

  16 Mar 2009; Christoph Mende <angelos@gentoo.org>
  xfce4-settings-4.6.0.ebuild:
  Added dependency on xorg-server-1.5.3 for XI 1.4 (bug 262333)

*xfce4-settings-4.6.0 (10 Mar 2009)

  10 Mar 2009; Christoph Mende <angelos@gentoo.org> +metadata.xml,
  +xfce4-settings-4.6.0.ebuild:
  Xfce-4.6 bump
