@@ -1,4 +1,4 @@
 DIST xfce4-settings-4.6.1.tar.bz2 501587 RMD160 6ecfa08d6ad528d43988c5fe128b2fcd6db6f0d3 SHA1 ab117c3923571e2437095fd165ac4bf392e658e0 SHA256 36dda4d43366fad47ee95ea5d4fa336d0b14f79c524b4f29a2ac1b9ada4abf8d
-EBUILD xfce4-settings-4.6.1.ebuild 1206 RMD160 9864acdb69fbf6af2b1cc942a584f329e57b959a SHA1 3f3b26017c53cd2375b46e6ba5fee27320aa46f5 SHA256 037ad1afc56656c4c8083bc5bb517ecc21ed960df7668a4c31648cd42b266f7a
-MISC ChangeLog 843 RMD160 aea7ed8de6137bdad201b02a0e705e4557678921 SHA1 91bf4e485c4ef09d6d76e4431c716b851b95e3db SHA256 aa0b0c1517285517d59bc1a50e39f3f3302573acb4e65e3ee8d7d7a39e5debd0
+EBUILD xfce4-settings-4.6.1.ebuild 1223 RMD160 9db42dd0e87b1e8087858825aee2f0e4c255ed93 SHA1 84a97f3bad88a51fcf83280cd2db736ddd608946 SHA256 9cedc87f0ebcb24aadcd1afbc2a4a4a91d10ec7eae95307042ca1038d8044ba7
+MISC ChangeLog 960 RMD160 98c40a3b41609b7088e9928bbb528dd201170313 SHA1 2a5f07032086bcb42e920bcfe9580773efaf85aa SHA256 dcad36ab76ae98f18f9da2eb2d61401a163660f743f82fef88c89f4516f5f956
 MISC metadata.xml 363 RMD160 2f66508d394f9cc14654775f3a0b117bc10d3ef5 SHA1 8a3e6715e41535ea04377624a621c9ada60fd5ff SHA256 2442135d806e37420f1904d5b32e8b7afe94ed212307d25667f363db06c558e3
