@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-settings/xfce4-settings-4.6.1.ebuild,v 1.1 2009/04/21 04:26:48 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-settings/xfce4-settings-4.6.1.ebuild,v 1.2 2009/04/28 01:16:55 darkside Exp $
 
 EAPI="1"
 
@@ -36,7 +36,9 @@ DEPEND="${RDEPEND}
 	x11-proto/inputproto
 	x11-proto/xf86vidmodeproto"
 
-XFCE_CONFIG+=" $(use_enable libnotify) $(use_enable keyboard libxklavier)
+pkg_setup() {
+	XFCE_CONFIG+=" $(use_enable libnotify) $(use_enable keyboard libxklavier)
 	$(use_enable sound sound-settings) --enable-xcursor"
+}
 
 DOCS="AUTHORS ChangeLog NEWS README TODO"
