@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfce4-settings
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-settings/ChangeLog,v 1.4 2009/04/21 04:26:48 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-settings/ChangeLog,v 1.5 2009/04/28 01:18:45 darkside Exp $
+
+  28 Apr 2009; Jeremy Olexa <darkside@gentoo.org> ChangeLog:
+  Move use_enable out of global scope into pkg_setup()
 
 *xfce4-settings-4.6.1 (21 Apr 2009)
 
